# SmartToDoListClock

./: CMakeLists.txt  README.txt  addtododialog.cpp  addtododialog.h  aiquoteservice.cpp  aiquoteservice.h  aivisualengine.cpp  aivisualengine.h  clockwidget.cpp  clockwidget.h  configmanager.cpp  configmanager.h  emotionanalyzer.cpp  emotionanalyzer.h  main.cpp  mainwindow.cpp  mainwindow.h  neumorphism.h  style.txt  todoitem.cpp  todoitem.h  todowidget.cpp  todowidget.h  weatherwidget.cpp  weatherwidget.h  x11globalshortcut.cpp  x11globalshortcut.h  样式.wps
config/: kimi_key.txt
